<resources>
    <string name="default_notification_channel_id">mediate</string>
    <string name="app_name">Mediate</string>
    <string name="title">내 주변 <font color='#0070FF'>튜터&amp;튜티</font>\n만나보러 갈까요??</string>
    <string name="look"><u>보기</u></string>
    <string name="hide"><u>숨기기</u></string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="check_id">아이디를 입력해주세요</string>
    <string name="check_password">비밀번호를 입력해주세요</string>
    <string name="check_login">아이디 혹은 비밀번호가 다릅니다. 확인 후 시도해주세요.</string>
    <string name="check_register">가입 이력이 없습니다 회원가입을 진행해 주세요..</string>
    <string name="remember_id">로그인 상태 유지</string>
    <string name="login">로그인하기</string>
    <string name="find_id">아이디 찾기</string>
    <string name="reset_password">비밀번호 재설정</string>
    <string name="register">회원가입</string>
    <string name="register_finish">회원가입 완료</string>
    <string name="register_finish_desc">회원가입이 완료되었습니다.</string>
    <string name="alert_cancel_register">회원가입 중단</string>
    <string name="alert_cancel_register_out">회원가입을 중단하시겠습니까?</string>
    <string name="cancel_register">회원가입이 취소되었습니다.</string>
    <string name="alert_cancel_select_info">추가정보입력 중단</string>
    <string name="alert_cancel_select_info_out">추가정보 입력을 중단하시겠습니까?</string>
    <string name="cancel_select_info">추가정보입력이 취소되었습니다.</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="register_finish_hint">정보를 입력하면 바로 튜터링을 할 수 있어요</string>
    <string name="register_finish_input_info">정보 입력하기</string>
    <string name="register_finish_go_main">메인화면 바로가기</string>
    <string name="auth">본인인증</string>
    <string name="auth_text">계정 도용을 막기 위한 본인 인증 절차입니다.</string>
    <string name="name">이름</string>
    <string name="phone_num">휴대폰 번호(\'-\'없이)</string>
    <string name="input_auth">인증번호 입력</string>
    <string name="send_auth"><u>인증번호 보내기</u></string>
    <string name="resend_auth"><u>인증번호가 안오나요?</u></string>
    <string name="auth_check_all">전체 동의</string>
    <string name="auth_check1">개인정보 수집 이용에 대한 동의<font color='#0070FF'>*</font></string>
    <string name="auth_check2">고유식별번호의 수집 이용에 대한 동의<font color='#0070FF'>*</font></string>
    <string name="auth_check3">통신사 이용약관 동의<font color='#0070FF'>*</font></string>
    <string name="auth_check4">본인인증 서비스 이용 동의<font color='#0070FF'>*</font></string>
    <string name="select_type">튜터/튜티 선택</string>
    <string name="select_type_question1">님은</string>
    <string name="select_type_question2">튜터인가요, 튜티인가요?</string>
    <string name="select_type_tutor">대학생 튜터</string>
    <string name="select_type_tutee">초/중/고 튜티</string>
    <string name="select_type_tutor_info">대학교에서 인증받은 튜터입니다.</string>
    <string name="select_type_tutee_info">튜터링을 원하는 튜티입니다.</string>
    <string name="input_code">인증코드 입력</string>
    <string name="input_code_hint">인증코드 6자리</string>
    <string name="input_code_question">학교 내부 인증코드를\n입력해주세요!</string>
    <string name="code_info"><u>학교 내부 인증 코드가 뭔가요?</u></string>
    <string name="check_code">인증번호가 맞지 않습니다. 다시 확인해주세요.</string>
    <string name="input_id_password">아이디/비번 입력</string>
    <string name="input_id_password_question">조금만 힘내주세요!</string>
    <string name="re_password">비밀번호 재입력</string>
    <string name="input_id_hint">6~12자 영문,숫자로 입력해 주세요</string>
    <string name="input_password_hint">영문 대소문자, 숫자, 특수문자를 혼합해 주세요</string>
    <string name="input_re_password_hint">비밀번호를 다시 입력해 주세요</string>
    <string name="select_info_school">학교/학년 입력</string>
    <string name="select_info_univ">학교/학과/학년 입력</string>
    <string name="select_info_now_school">재학중인 학교</string>
    <string name="select_info_now_univ">재학중인 대학교</string>
    <string name="select_school_question1">님의</string>
    <string name="select_school_question2">정보를 알려주세요.</string>
    <string name="search_school">학교 검색</string>
    <string name="input_area">튜터링 지역 입력</string>
    <string name="select_area_now">현재 위치</string>
    <string name="select_area_1km">1km 이내</string>
    <string name="select_area_3km">3km</string>
    <string name="select_area_5km">5km</string>
    <string name="input_area_limit">&#160;/ 5</string>
    <string name="select_subject">과목/전공/프로그램 입력</string>
    <string name="tutor">튜터</string>
    <string name="tutee">튜티</string>
    <string name="select_subject_question1">님이</string>
    <string name="select_subject_question2">자신있는 것을 알려주세요!</string>
    <string name="select_subject_info">교육 가능한 과목/전공/프로그램을 입력해 주세요.</string>
    <string name="elementary_subject">초등 주요과목</string>
    <string name="middle_subject">중등 주요과목</string>
    <string name="high_subject">고등 주요과목</string>
    <string name="entrance_exam">입시</string>
    <string name="computer">컴퓨터</string>
    <string name="foreign_language">외국어</string>
    <string name="instrument">악기</string>
    <string name="register_select_finish">본격적으로 튜터링 시작!</string>
    <string name="register_finish_more_desc">입력해주신 정보로 나에게 맞는 튜터링을 할 수 있어요!</string>
    <string name="home_desc">좋은 영향을 주는 튜터링은\n"<b>"메디에이트에서"</b>"</string>
    <string name="popular_subject">현재 커뮤니티에서 인기있는 주제는</string>
    <string name="end">입니다</string>
    <string name="go_to_community">커뮤니티보러가기</string>
    <string name="tutoring_list">튜터링 리스트</string>
    <string name="community_list">커뮤니티 인기글</string>
    <string name="chatting">채팅</string>
    <string name="chatting_search_hint">튜티 또는 방 이름 검색</string>


</resources>