<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/input_code"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_code_question"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_edit_change"
        android:hint="@string/input_code_hint"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_hint_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_code_hint"
        android:textSize="11sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/text_grey"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/et_code"
        app:layout_constraintTop_toTopOf="@+id/et_code"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_input_code_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        android:text="@string/check_code"
        android:textColor="@color/red"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_code"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/tv_code_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code_info"
        android:textColor="@color/auth_grey"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_code" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_next_inactive"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/register_next_inactive"
        android:padding="10dp"
        android:text="다음"
        android:textColor="#9E9E9E"
        android:textSize="16sp"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_next_active"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/register_next_active"
        android:padding="10dp"
        android:text="다음"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>