<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register_finish"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="이름"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="님"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toRightOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginLeft="16dp" />


    <TextView
        android:id="@+id/tv_code_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_finish_desc"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        android:layout_marginStart="16dp" />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/register_finish"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_code_info" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_input_info"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/register_finish_go_info"
        android:padding="10dp"
        android:text="@string/register_finish_input_info"
        android:textColor="@color/main_blue"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@id/bt_go_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_go_main"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/register_next_active"
        android:padding="10dp"
        android:text="@string/register_finish_go_main"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>