<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/text_black"
                    android:text="@string/app_name"/>

                <View
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageButton
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/icon_bell"/>

                <ImageButton
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="16dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/icon_menu"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:layout_marginTop="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/home_desc"/>


            <ImageView
                android:layout_width="235dp"
                android:layout_height="235dp"
                android:src="@drawable/background"
                android:layout_gravity="end"
                android:layout_marginRight="-20dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="-20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/frame_round"
                android:elevation="10dp"
                android:orientation="vertical"
                android:layout_marginTop="-40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/text_black"
                            android:gravity="start|top"
                            android:text="@string/popular_subject"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/text_popular_subject"
                                android:text="인기주제"
                                android:textSize="14sp"
                                android:textColor="@color/text_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <TextView
                                android:text="@string/end"
                                android:textSize="14sp"
                                android:textColor="@color/text_black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="1dp"/>

                    <ImageView
                        android:src="@drawable/popular_subject"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="end|top"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="end|bottom"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp">
                    <TextView
                        android:text="@string/go_to_community"
                        android:textSize="9sp"
                        android:textColor="@color/main_blue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:background="@drawable/right_arrow_blue"
                        android:layout_width="13dp"
                        android:layout_height="13dp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:textSize="14sp"
                    android:textColor="@color/text_black"
                    android:text="@string/tutoring_list"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_tutoring_list"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    android:layout_height="322dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/text_black"
                        android:text="@string/community_list"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="end"
                        android:background="@drawable/right_arrow"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_community_popular"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:background="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="126dp"
                    android:layout_marginBottom="84dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_community_list"
                        android:layout_width="match_parent"
                        android:layout_height="126dp"
                        android:overScrollMode="never"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>